--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
   <app-header></app-header>
 </header>
 <div class="container">
-  <app-edit-mode-info *ngIf="this.editModeInfoService.getEditModeState"></app-edit-mode-info>
+  <app-edit-mode-info *ngIf="editModeInfoService.getEditModeState"></app-edit-mode-info>
   <div class="left-menu">
 	  <app-left-menu></app-left-menu>
   </div>	
