--- a/src/app/card-point/card-point.component.html
+++ b/src/app/card-point/card-point.component.html
@@ -20,7 +20,7 @@
 		<h5>{{marker.Address}}</h5>
 	  </div>
 	  <div class="containerLeftFooter">
-		<p>Додано: {{date}} {{time}}</p>
+		<p>Добавлено: {{date}} {{time}}</p>
 	  </div>
 	</div>
   </div>
