--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -30,7 +30,7 @@
       </ng-template>
     </ng-container>
     <li>
-      <a class="git-link"></a>
+      <a href="https://github.com/Maksim321/ZPMap" class="git-link"></a>
     </li>
   </ul>
 </div>
