--- a/src/app/add-marker-form/add-marker-form.component.css
+++ b/src/app/add-marker-form/add-marker-form.component.css
@@ -41,14 +41,22 @@ label{
 
 button{
   border: 1px solid #9e0059;
-  padding: 10px 12px;
-  cursor:pointer;
   font-weight: 700;
-  font-size:14px;
-  width: 200px;
-  float: right;
+  font-size: 14px;
+  border-radius: 2px;
+  padding: 10px 40px;
+  cursor: pointer;
   color: #fff;
   background-color: #bd347a;
+  margin-right: 20px;
+  float: right;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+}
+
+button:hover{
+  background-color: #9e0059;
+  color: #fff;
 }
 
 @media screen and (min-width:100px) {
