--- a/src/app/left-menu/left-menu.component.css
+++ b/src/app/left-menu/left-menu.component.css
@@ -63,6 +63,8 @@
 .tabs nav a img {
   right:0;
   position:absolute;
+  padding: 5px;
+  box-sizing: border-box;
 }
 
 .tabs .content.visible {
@@ -120,6 +122,7 @@
   transition: 0.3s;
   font: 13px sans-serif;
   font-weight: 600;
+  outline: none;
 }
 
 .subcategoriesButton button:hover{
