--- a/src/app/left-menu/left-menu.component.html
+++ b/src/app/left-menu/left-menu.component.html
@@ -1,9 +1,9 @@
 <div class="tabs">
-  <div *ngFor="let category of menuService.getSelectedCategories" class="content" 
+  <div *ngFor="let category of subscribingToDataService.getSelectedCategories" class="content" 
   [class.visible]="category.uidCategory == menuService.getSelectedCategoriesUID">
 	<div class="contentHead">
       <div class="subcategoriesList">
-		<ng-container *ngFor='let subcategory of menuService.getSelectedSubcategories '>
+		<ng-container *ngFor='let subcategory of subscribingToDataService.getSelectedSubcategories '>
 		  <div class="subcategoriesList_radio">
 			<input type="radio" (change)="menuService.setSelectedSubcategoriesUID = subcategory.uidSubcategory" 
 				[value]='subcategory.uidSubcategory' 
@@ -14,18 +14,18 @@
 	  </div>
 	  <div class='subcategoriesButton'>
 		<button (click)="menuService.getMarkersBySubcategory()">Обновить</button>
-		<button (click)="menuService.clearPoints()">Очистить</button>	
+		<button (click)="menuService.clearMarkers()">Очистить</button>	
 	  </div>
 	</div>
 	<div class="contentBody">
-	  <ng-container *ngFor='let marker of menuService.getSelectedMarkers'>
+	  <ng-container *ngFor='let marker of subscribingToDataService.getSelectedMarkers'>
 		<app-card-point [marker]="marker"></app-card-point>
 	  </ng-container>	
 	</div>
   </div>
   <nav>
-    <a *ngFor='let category of menuService.getSelectedCategories'
-       (click)="menuService.openMenu(category.uidCategory)"
+    <a *ngFor='let category of subscribingToDataService.getSelectedCategories'
+       (click)="menuService.openOrCloseMenu(category.uidCategory)"
        [class.selected]="category.uidCategory == menuService.getSelectedCategoriesUID"
        [title]='category.NameCategories'>
 	  <img class="first" [src]='category.UrlImageCategories+"_black_72px.png"'/>
