--- a/src/app/edit-mode-info/edit-mode-info.component.html
+++ b/src/app/edit-mode-info/edit-mode-info.component.html
@@ -1,4 +1,12 @@
-<div class="add-point-info">
-  <div class="add-point-info-text"><h3>ВЫБЕРИТЕ МЕСТО НА КАРТЕ</h3></div>
-  <a (click)="editModeInfoService.cancelEditMode()" class="add-point-info-cancel">Отмена</a>
+<div class="add-marker-info">
+  <div class="add-marker-info-text"><h3>ВЫБЕРИТЕ МЕСТО НА КАРТЕ</h3></div>
+  <a (click)="cancelEditMode()" class="add-marker-info-cancel">Отмена</a>
+</div>
+
+<div class="current-point-info">
+  <div class="wrap">
+	<p>
+	  {{mapService.getcurrentMarker.Address}}
+	</p>
+  </div>
 </div>
