--- a/src/app/loading-spinner/loading-spinner.component.css
+++ b/src/app/loading-spinner/loading-spinner.component.css
@@ -2,7 +2,9 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  position: absolute;
+  /*position: absolute;*/
+  position: fixed;
+  z-index: 1;
   background-color: #000;
   opacity: 0.7;
 }
@@ -10,7 +12,8 @@
 .spinner-container {
   width: 100%;
   height: 100%;
-  transform: translateY(50%);
+  -webkit-transform: translateY(45%);
+  transform: translateY(45%);
 }
 .overlay .spinner-container> div {
   background-color: #333;
