--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,7 +18,7 @@
           </a>
         </li>
         <li>
-          <a href="/" class="header-login-link" (click)="LogOut()">
+          <a class="header-login-link" (click)="LogOut()">
             Выход
           </a>
         </li>
