--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,7 +23,7 @@
         <a>Войти</a>
       </li>
     </ng-template>
-    <li>
+    <li class="link-container__list">
       <a href="https://github.com/Maksim321/ZPMap" class="link-container__git-link"></a>
     </li>
   </ul>
